--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ body a:focus {
     border-radius: 50%;
     margin: 0 auto;
     border: 4px solid rgba(255, 255, 255, 0.39);
+    width: 100px;
 }
 /* CSS Document */
 
